- SpoonLocale: Added getConjunction() and getConjunctions().
- SpoonFilter::urlise(): Added third optional parameter $language. You can provide this to get 
  language-specific alternatives for the '&' char.
- SpoonSession::destroy now works decently in Chrome under flaky circumstances
- SpoonForm::getTemplateExample has been cleaned up (in particular for checkboxes)

1.3.0 (2011-02-18)
----
- Template options may now start with an integer e.g. {option:404}
- The WHERE clause in SpoonDatabase::update and SpoonDatabase::delete may now be null instead of an 
  empty string.
- Added option for headers.sortingIcon in datagrid.tpl - empty <img> elements are no longer shown 
  for default sorting settings.
- Fixed the sorting problem when setting the sortParameter option in a datagrid.
- Bugfix: some classes were using non-existing exceptions, fixed this issue.
- Rewrote a few methods in SpoonFilter for consistency and performance reasons.
- Bugfix: when providing a template to SpoonTemplate::display a few extra checks are performed.
- Bugfix: multiple forms on the same page would produce ambiguous id's resulting in 'invalid' 
  markup.
- Feature: a callback mechanism for exceptions has been added. New constant 
  'SPOON_EXCEPTION_CALLBACK'.
- Feature: you can now overwrite the token error message in SpoonForm.
- Bugfix: add FOLLOW_LOCATION to SpoonFile::download cURL call so rewrites pose no problem.
- Bugfix: fixed SpoonFilter::isFloat and SpoonFilter::isInteger to work on every float and int 
  instead of relying on regexes.
- Rewrote some small snippets of code to improve performance.
- Bugfix: rewrote SpoonFilter::isInternalReferrer to use PHP's internal parse_url function.
- Bugfix: createThumbnail had been missing from SpoonFormImage.
- Bugfix: form tokens are now working when you have more than one form on your page.
- Feature: SpoonFilter::arrayMapRecursive() now has an optional third parameter $allowedKeys, which 