@@ -10,6 +10,8 @@
   language-specific alternatives for the '&' char.
 - SpoonSession::destroy now works decently in Chrome under flaky circumstances
 - SpoonForm::getTemplateExample has been cleaned up (in particular for checkboxes)
+- SpoonFormTime::isValid now is a bit more precise and doesn't allow extra characters.
+- Added some basic getters to SpoonDatabase
 
 1.3.0 (2011-02-18)
 ----
